week4/manifests/day5/ingress-host-based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  ingressClassName: nginx
  rules:
    # www.bootcamp.local -> main website
    - host: www.bootcamp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-main-service
                port:
                  number: 80
    
    # api.bootcamp.local -> API service
    - host: api.bootcamp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
    
    # admin.bootcamp.local -> Admin panel
    - host: admin.bootcamp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
